# src/server/lib/zod-schemas/abrigo/updateAbrigoSchema.ts
@@ -5,4 +5,5 @@ export const UpdateAbrigoSchema = z.object({
   descricao: z.string().optional(),
   latitude: z.number().optional(),
   longitude: z.number().optional(),
+  idZonaEmissao: z.number().int().positive("ID da Zona de Emissão inválido")
 });
